Use new Java 21 features (#462)
* Use new Java 21 features

* Update sonar-maven-plugin version to 5.2.0.4988

* azurite 3.35.0

* Define annotation processors on compiler plugin
add mockito plugin to surefire execution