@@ -220,7 +220,7 @@ class QuestionnairesRestControllerApiKeyTest {
     List<FormListItem> r = response.getBody();
     assertNotNull(r);
     assertEquals(2, r.size());
-    assertEquals("l1",r.get(0).getMetadata().getLabel());
+    assertEquals("l1",r.getFirst().getMetadata().getLabel());
     assertEquals("l2",r.get(1).getMetadata().getLabel());
 
     verify(questionnaireDatabaseMock(), times(1)).findAllMetadata(anyString(), isNull(), isNull(), isNull(), isNull(), isNull(), any());
