@@ -58,19 +58,19 @@ class PostgreSQLFormVersionControlDatabaseTest extends AbstractFormVersionContro
     List<FormDatabase.FormMetadataRow> rows = new ArrayList<>();
     getJdbcFormDatabase().findAllMetadata("12341234-1234-1234-1234-123412341236", ImmutableFormMetadata.builder().label("test form 2").build(), rows::add);
     assertEquals(1, rows.size());
-    assertEquals(form2.getId(), rows.get(0).getId());
+    assertEquals(form2.getId(), rows.getFirst().getId());
     rows.clear();
 
     getJdbcFormDatabase().findAllMetadata("12341234-1234-1234-1234-123412341236", ImmutableFormMetadata.builder().label("test form").build(), rows::add);
     assertEquals(1, rows.size());
-    assertEquals(form.getId(), rows.get(0).getId());
-    assertEquals(Set.of("label1", "label2"), rows.get(0).getValue().getLabels());
+    assertEquals(form.getId(), rows.getFirst().getId());
+    assertEquals(Set.of("label1", "label2"), rows.getFirst().getValue().getLabels());
     rows.clear();
 
 
     getJdbcFormDatabase().findAllMetadata("12341234-1234-1234-1234-123412341236", ImmutableFormMetadata.builder().putAdditionalProperties("extra",1).build(), rows::add);
     assertEquals(1, rows.size());
-    assertEquals(form2.getId(), rows.get(0).getId());
+    assertEquals(form2.getId(), rows.getFirst().getId());
     rows.clear();
   }
 
